--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -119,7 +119,9 @@
                 <option value="greg_number">Greg Number</option>
                 <option value="stc_or_wing">STC / Wing Number</option>
                 <option value="first-production">Date of First Production</option>
-                
+                <option value="first-edition">Date of First Edition</option>
+                <option value="year-published">Year Published</option>
+
               </select>
               <input id="advancedSearchField" type="text" class="form-control" aria-label="advancedSearchField" aria-describedby="advancedSearchField">
               <select id="choicesSelect" style="display: hide;" class="form-control"></select>
@@ -486,6 +488,21 @@ searchSelect.addEventListener('change', (event) => {
     choices.destroy()
     choicesSelect.style.display = "none";
   }
+  if (searchSelect.value === 'first-edition') { 
+    // hide choices and text input, display date slider
+    advancedSearchField.style.display = "none";
+    slider.style.display = "block";
+    choices.destroy()
+    choicesSelect.style.display = "none";
+  }
+  if (searchSelect.value === 'year-published') { 
+    // hide choices and text input, display date slider
+    advancedSearchField.style.display = "none";
+    slider.style.display = "block";
+    choices.destroy()
+    choicesSelect.style.display = "none";
+  }
+  
   if (searchSelect.value === 'author') { 
       // hide advancedSearchField
       
@@ -909,12 +926,24 @@ function search() {
       let start_range = current_range[0]
       let end_range = current_range[1]
       results = results.filter(item =>  item.composition_date >= start_range && item.composition_date <= end_range)
-      console.log(start_range, end_range)
-      //date_first_publication
-      //date_first_publication_display
-      //composition_date
-    }
+      
+  }
   
+  if (searchSelectvalue && searchSelectvalue === 'first-edition') {
+      let current_range = slider.noUiSlider.get()
+      let start_range = current_range[0]
+      let end_range = current_range[1]
+      results = results.filter(item =>  item.date_first_publication >= start_range && item.date_first_publication <= end_range)
+      
+  }
+
+  if (searchSelectvalue && searchSelectvalue === 'year-published') {
+      let current_range = slider.noUiSlider.get()
+      let start_range = current_range[0]
+      let end_range = current_range[1]
+      results = results.filter(item =>  item.year_int >= start_range && item.year_int <= end_range)
+      
+  }
   table.add(results);
   table.update();
 };
